--- a/book.toml
+++ b/book.toml
@@ -3,4 +3,4 @@ authors = ["JordiMateoUdL"]
 language = "en"
 multilingual = false
 src = "src"
-title = "HandsOn on Cloud Computing and Big Data for BioMed"
+title = "HandsOn Labs on Cloud Computing and Big Data for BioMed"
