--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,5 @@ language = "en"
 multilingual = false
 src = "src"
 title = "HandsOn Labs on Cloud Computing and Big Data for BioMed"
+
+[preprocessor.quiz]
