--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -25,7 +25,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      MDBOOK_VERSION: 0.4.34
+      MDBOOK_VERSION: 0.4.36
     steps:
       - uses: actions/checkout@v3
       - name: Install mdBook
@@ -33,7 +33,7 @@ jobs:
           curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
           rustup update
           cargo install --version ${MDBOOK_VERSION} mdbook
-          cargo install --version ${MDBOOK_VERSION} mdbook-quiz
+          cargo install mdbook-quiz
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
