--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: build_outputs_folder/
+          path: ./book
 
   # Deployment job
   deploy:
