--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -34,6 +34,8 @@ jobs:
           rustup update
           cargo install --version ${MDBOOK_VERSION} mdbook
           cargo install mdbook-quiz
+          cargo install mdbook-admonish
+          mdbook-admonish install
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
