--- a/book.toml
+++ b/book.toml
@@ -1,8 +1,17 @@
 [book]
-authors = ["JordiMateoUdL"]
+authors = ["JordiMateoUdL", "FerranAD"]
 language = "en"
 multilingual = false
 src = "src"
-title = "HandsOn Labs on Cloud Computing and Big Data for BioMed"
+title = "Companion website for High-Performance and Distributed Computing subject"
 
 [preprocessor.quiz]
+
+[preprocessor.admonish]
+command = "mdbook-admonish"
+assets_version = "3.0.3" # do not edit: managed by `mdbook-admonish install`
+
+[output]
+
+[output.html]
+additional-css = ["./mdbook-admonish.css"]
